--- a/src/main/resources/templates/employeeView.html
+++ b/src/main/resources/templates/employeeView.html
@@ -15,6 +15,18 @@
 <body>
 <div class="contentEmployee">
     <h1>Employee Administration</h1>
+    <form th:action="@{/employee/new}" th:object="${newEmployee}">
+        <div style="margin: 10%" class="d-flex justify-content-around">
+            <label>Number: <input th:field="${newEmployee.employeeNo}" type="number"></label>
+            <label>Firstname: <input th:field="${newEmployee.firstname}" type="text"></label>
+            <label>Lastname: <input th:field="${newEmployee.lastname}" type="text"></label>
+            <label>Gender: <input th:field="${newEmployee.gender}" type="text"></label>
+            <label>Date of Birth: <input th:field="${newEmployee.dateOfBirth}" type="date"></label>
+        </div>
+        <div class="d-flex justify-content-center">
+            <button class="btn btn-success " type="submit" value="">add employee</button>
+        </div>
+    </form>
 </div>
 </body>
 </html>
