--- a/src/main/resources/templates/employeeView.html
+++ b/src/main/resources/templates/employeeView.html
@@ -16,12 +16,25 @@
 <div class="contentEmployee">
     <h1>Employee Administration</h1>
     <form th:action="@{/employee/new}" method="post" th:object="${newEmployee}">
-        <div style="margin: 10%" class="d-flex justify-content-around">
-            <label>Number: <input th:field="${newEmployee.employeeNo}" type="number"></label>
-            <label>Firstname: <input th:field="${newEmployee.firstname}" type="text"></label>
-            <label>Lastname: <input th:field="${newEmployee.lastname}" type="text"></label>
-            <label>Gender: <input th:field="${newEmployee.gender}" type="text"></label>
-            <label>Date of Birth: <input th:field="${newEmployee.dateOfBirth}" type="date"></label>
+        <div class="d-flex justify-content-around">
+            <span class="error" th:if="${#fields.hasErrors()}">Please correct the problems below and resubmit</span>
+        </div>
+        <div style="margin-top: 10%; margin-bottom: 10%" class="d-flex justify-content-around">
+            <label>Number:
+                <span class="error" th:if="${#fields.hasErrors('employeeNo')}" th:errors="${newEmployee.employeeNo}"></span>
+                <input th:field="${newEmployee.employeeNo}" type="number"></label>
+            <label>Firstname:
+                <span class="error" th:if="${#fields.hasErrors('firstname')}" th:errors="${newEmployee.firstname}"></span>
+                <input th:field="${newEmployee.firstname}" type="text"></label>
+            <label>Lastname:
+                <span class="error" th:if="${#fields.hasErrors('lastname')}" th:errors="${newEmployee.lastname}"></span>
+                <input th:field="${newEmployee.lastname}" type="text"></label>
+            <label>Gender:
+                <span class="error" th:if="${#fields.hasErrors('gender')}" th:errors="${newEmployee.gender}"></span>
+                <input th:field="${newEmployee.gender}" type="text"></label>
+            <label>Date of Birth:
+                <span class="error" th:if="${#fields.hasErrors('dateOfBirth')}" th:errors="${newEmployee.dateOfBirth}"></span>
+                <input th:field="${newEmployee.dateOfBirth}" type="date"></label>
         </div>
         <div class="d-flex justify-content-center">
             <button class="btn btn-success " type="submit" value="">add employee</button>
